# uam

./: .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  SECURITY.md  SKILL.md  alembic.ini  mkdocs.yml  pyproject.toml  requirements.txt
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  3_question.yaml  config.yml
.github/workflows/: docs.yml  issue-cleanup.yml  labeler.yml  lock-threads.yml  stale.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_reservations.py
contracts/: IPriceOracle.sol  Makefile  UAMNameRegistry.sol  UAMPriceOracle.sol  foundry.toml  package.json
contracts/deployments/: mainnet.json  reserved-names.json  sepolia.json
contracts/script/: ConfigureAuction.s.sol  Deploy.s.sol  DeployMainnet.s.sol  DeploySepolia.s.sol  ReserveNames.s.sol
contracts/test/: DutchAuction.t.sol  Integration.t.sol  MockPriceFeed.sol  UAMNameRegistry.t.sol
docker/: .env.example  Dockerfile  docker-compose.federation.yml  docker-compose.yml
docs/: CNAME  index.md  quickstart.md  security.md
docs/cli/: index.md
docs/overrides/: main.html
docs/protocol/: index.md
docs/relay/: configuration.md  federation-setup.md  index.md  openapi.json  operator-guide.md
docs/sdk/: index.md
docs/stylesheets/: extra.css
examples/interop-demo/: README.md  demo.py  docker-compose.demo.yml  run-demo.sh  ts-agent.mjs
landing/components/: AgentPanel.tsx  MultiAgentDemoWidget.tsx  ProtocolCall.tsx
scripts/: deploy-relay.sh  export_openapi.py  gen_ref_pages.py
src/uam/: __init__.py
src/uam/bridge/: __init__.py  a2a.py
src/uam/cards/: __init__.py  avatars.py  image.py  vcard.py  vcard_parser.py
src/uam/cli/: __main__.py  main.py
src/uam/data/: UAMNameRegistry.abi.json  __init__.py
src/uam/db/: __init__.py  engine.py  models.py  retry.py  session.py
src/uam/db/crud/: __init__.py  agents.py  audit.py  contacts.py  dedup.py  domain_verification.py  federation.py  handshakes.py  messages.py  reputation.py  (+3 more)
src/uam/demo/: groucho_agent.py  hello_agent.py  socrates_agent.py  wilde_agent.py
src/uam/mcp/: __init__.py  server.py
src/uam/plugin/: __init__.py  openclaw.py
src/uam/protocol/: __init__.py  address.py  contact.py  crypto.py  envelope.py  errors.py  types.py
src/uam/relay/: __init__.py  app.py  auth.py  config.py  connections.py  database.py  demo_sessions.py  federation.py  heartbeat.py  models.py  rate_limit.py  relay_auth.py  relay_blocklist.py  relay_reputation.py  reputation.py  spam_filter.py  verification.py  webhook.py  webhook_validator.py  ws.py
src/uam/sdk/: __init__.py  _sync.py  agent.py  config.py  contact_book.py  dns_verifier.py  handshake.py  key_manager.py  message.py  resolver.py  tier3.py  webhook_verify.py
tests/: conftest.py  test_address.py  test_contact.py  test_crypto.py  test_envelope.py  test_errors.py  test_tier3_resolver.py  test_types.py
tests/bridge/: test_a2a.py
tests/cards/: test_image.py  test_vcard.py
tests/cli/: test_cli.py  test_cli_claim.py  test_tofu_cli.py
tests/cross_language/: conftest.py  test_ts_envelope.py
tests/db/: conftest.py  test_agents.py  test_audit.py  test_contacts.py  test_dedup.py  test_domain_verification.py  test_federation.py  test_handshakes.py  test_messages.py  test_migrations.py  test_reputation.py  test_reservations.py  test_spam.py  test_webhooks.py
tests/demo/: test_hello_agent.py
tests/integration/: test_dns_reputation_integration.py  test_domain_verification.py  test_webhook_integration.py
tests/interop/: __init__.py  conftest.py  test_cross_relay.py  test_cross_sdk.py
tests/plugin/: test_openclaw.py
tests/relay/: conftest.py  test_admin_routes.py  test_auth.py  test_dedup.py  test_demo_routes.py  test_demo_sessions.py  test_expiry.py  test_federation.py  test_heartbeat.py  test_inbox.py  test_offline_delivery.py  test_presence.py  test_public_key.py  test_rate_limit.py  test_receipts.py  test_registration.py  test_reputation.py  test_reserve.py  test_send_http.py  test_spam_filter.py  test_spam_pipeline.py  test_verify_domain.py  test_viral.py  test_webhook_admin.py  test_webhook_delivery.py  test_webhook_validator.py  test_websocket.py
tests/sdk/: conftest.py  test_config.py  test_contact_book.py  test_dns_verifier.py  test_handshake.py  test_key_manager.py  test_message.py  test_receipts.py  test_reconnection.py  test_registration.py  test_resolver.py  test_send_inbox.py  test_sync_wrappers.py  test_tofu.py  test_transport_http.py  test_webhook_verify.py
tests/test_mcp/: test_mcp_server.py
ts-sdk/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
ts-sdk/src/: index.ts
ts-sdk/src/cli/: helpers.ts  index.ts
ts-sdk/src/protocol/: address.ts  contact.ts  crypto.ts  envelope.ts  errors.ts  index.ts  types.ts
ts-sdk/src/sdk/: agent.ts  config.ts  contact-book.ts  dns-verifier.ts  handshake.ts  index.ts  key-manager.ts  message.ts  resolver.ts  tier3.ts  webhook-verify.ts
ts-sdk/tests/cli/: cli.test.ts  contact-cli.test.ts  trust-cli.test.ts
ts-sdk/tests/cross-language/: generate-fixtures.py  ts-create-python-verify.test.ts  ts-verify-python.test.ts
ts-sdk/tests/protocol/: address.test.ts  contact.test.ts  crypto-vectors.test.ts  crypto.test.ts  envelope.test.ts
ts-sdk/tests/sdk/: agent.test.ts  config.test.ts  contact-book.test.ts  dns-verifier.test.ts  key-manager.test.ts  resolver.test.ts  tier3.test.ts  webhook-verify.test.ts
(+46 files in other folders)
