[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youam"
version = "0.3.2"
description = "Universal Agent Messaging — encrypted, trust-on-first-use messaging for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = [
    "uam",
    "universal-agent-messaging",
    "agent",
    "messaging",
    "e2e-encryption",
    "ed25519",
    "tofu",
    "trust-on-first-use",
    "a2a",
    "agent-to-agent",
    "relay",
    "handshake",
    "contact-card",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://youam.network"
Documentation = "https://docs.youam.network"
Repository = "https://github.com/youam-network/uam"
Changelog = "https://github.com/youam-network/uam/releases"
dependencies = [
    "pynacl>=1.6.2",
    "uuid6>=2025.0.1",
    "httpx>=0.28",
    "websockets>=14",
    "pydantic>=2.0",
    "aiosqlite>=0.21",
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
    "dnspython>=2.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[project.scripts]
uam = "uam.cli.main:cli"
uam-mcp = "uam.mcp.server:main"

[project.optional-dependencies]
chain = [
    "web3[async]>=7.0",
]
db = [
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21",
    "alembic>=1.14.0",
]
relay = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21",
    "alembic>=1.14.0",
]
mcp = [
    "mcp>=1.0",
]
cards = [
    "Pillow>=10.0",
]
demo = [
    "litellm>=1.30",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-click>=0.8",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-render-swagger-plugin>=0.1",
]
all = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "web3[async]>=7.0",
    "mcp>=1.0",
    "litellm>=1.30",
    "Pillow>=10.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21",
    "alembic>=1.14.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-click>=0.8",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-render-swagger-plugin>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.25",
    "pytest-httpx>=0.35",
    "httpx>=0.28",
    "jsonschema>=4.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uam.data" = ["*.json"]
"uam.cards.fonts" = ["*.ttf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
